--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bigboy Chuks — Frontend & Web Developer Portfolio</title>
+  <link rel="icon" type="image/png" href="https://i.ibb.co/HDsJMpG/Vibrant-Gradient-B-Design.png">
 
-  <!-- Icons -->
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+  <!-- Box Icons -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <style>
     :root {
@@ -514,12 +516,12 @@
       <a href="#home" class="logo">Portfol<span>io</span></a>
 
       <nav class="navbar" id="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#skills">Skills</a>
-        <a href="see-my-work.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="#home" class="active"><i class='bx bx-home'></i> Home</a>
+        <a href="#about"><i class='bx bx-user'></i> About</a>
+        <a href="#services"><i class='bx bx-briefcase'></i> Services</a>
+        <a href="#skills"><i class='bx bx-stats'></i> Skills</a>
+        <a href="see-my-work.html"><i class='bx bx-folder'></i> Portfolio</a>
+        <a href="contact.html"><i class='bx bx-envelope'></i> Contact</a>
       </nav>
 
       <div style="display:flex;gap:8px;align-items:center">
@@ -534,7 +536,7 @@
   <!-- Home -->
   <section class="home" id="home">
     <div>
-      <p class="sub"><span>H</span>ello, it's Me</p>
+      <p class="sub"><i class='bx bx-chevron-right'></i> <span>H</span>ello, it's Me</p>
       <h1 style="margin:4px 0 8px; font-size:clamp(2rem,5vw,3rem);">Big-boy Chuks</h1>
       <h3 style="margin:0 0 10px;">And I'm a <span class="multiple-text" style="color:var(--primary)"></span></h3>
       <p class="sub">Welcome! Explore my web design portfolio showcasing creativity, innovation, and user-centric solutions. Let's collaborate!</p>
@@ -544,7 +546,7 @@
         <a href="https://x.com/bigboy_code/photo"><i class='bx bxl-twitter'></i></a>
         <a href="https://www.instagram.com/bigteslaboy?igsh=MXFleDdrbTg5cWpweg=="><i class='bx bxl-instagram-alt'></i></a>
         <a href="https://ng.linkedin.com/in/big-boy-019464300"><i class='bx bxl-linkedin'></i></a>
-        <a href=" " class="text-gray-400 hover:text-white bg-gray-700 hover:bg-blue-600 rounded-full p-3 transition-all duration-300"><i class='bx bxl-github text-2xl'></i></a>
+        <a href=" "><i class='bx bxl-github'></i></a>
       </div>
 
       <div style="display:flex; gap:10px; flex-wrap:wrap">
@@ -557,7 +559,7 @@
 
     <div class="home-img card">
       <span></span>
-      <img src="https://via.placeholder.com/400x400" alt="Bigboy portrait" />
+      <img src="neec.nonso-190420.jpg" alt="Bigboy portrait" />
     </div>
   </section>
 
@@ -566,10 +568,10 @@
     <h2 class="heading">About <span>Me</span></h2>
     <div class="content">
       <div class="about-img card">
-        <img src="https://via.placeholder.com/500x400" alt="Working at desk" />
+        <img src="Screenshot 2025-09-12 063154.png" alt="Working at desk" />
       </div>
       <div>
-        <h3>Frontend Developer!</h3>
+        <h3><i class='bx bx-code-alt'></i> Frontend Developer!</h3>
         <p>As a frontend developer with a passion for clean, responsive design, I specialize in bringing creative visions to life through code. With a keen eye for detail and a love for innovation, I build seamless user experiences on the web.</p>
         <a href="see-my-work.html" class="btn"><i class='bx bx-show'></i> See My Work</a>
       </div>
@@ -584,7 +586,7 @@
         <i class='bx bx-code-alt'></i>
         <h3>Web Development</h3>
         <p>I build responsive, fast websites focused on clean UI and smooth UX across devices.</p>
-        <a href="contact.html" class="btn ghost">Start a Project</a>
+        <a href="contact.html" class="btn ghost"><i class='bx bx-rocket'></i> Start a Project</a>
       </article>
       <article class="service card">
         <i class='bx bx-mail-send'></i>
@@ -592,13 +594,13 @@
         <p>Seamlessly integrate forms that capture user inputs and deliver
              them directly to your email. Includes validation, spam protection, and
               smooth submission handling for a professional experience.</p>
-        <a href="contact.html" class="btn ghost">Discuss Scope</a>
+        <a href="contact.html" class="btn ghost"><i class='bx bx-conversation'></i> Discuss Scope</a>
       </article>
       <article class="service card">
         <i class='bx bxs-microchip'></i>
         <h3>Computer Engineering</h3>
         <p>Optimized systems that align hardware and software for reliable performance.</p>
-        <a href="contact.html" class="btn ghost">Get a Quote</a>
+        <a href="contact.html" class="btn ghost"><i class='bx bx-dollar-circle'></i> Get a Quote</a>
       </article>
     </div>
   </section>
@@ -609,25 +611,25 @@
     <div class="grid">
       <div class="card skill">
         <div style="display:flex;justify-content:space-between;align-items:center">
-          <strong>HTML</strong><span class="sub">95%</span>
+          <strong><i class='bx bxl-html5'></i> HTML</strong><span class="sub">95%</span>
         </div>
         <div class="bar"><div class="fill" data-target="95"></div></div>
       </div>
       <div class="card skill">
         <div style="display:flex;justify-content:space-between;align-items:center">
-          <strong>CSS</strong><span class="sub">90%</span>
+          <strong><i class='bx bxl-css3'></i> CSS</strong><span class="sub">90%</span>
         </div>
         <div class="bar"><div class="fill" data-target="90"></div></div>
       </div>
       <div class="card skill">
         <div style="display:flex;justify-content:space-between;align-items:center">
-          <strong>JavaScript</strong><span class="sub">80%</span>
+          <strong><i class='bx bxl-javascript'></i> JavaScript</strong><span class="sub">80%</span>
         </div>
         <div class="bar"><div class="fill" data-target="80"></div></div>
       </div>
       <div class="card skill">
         <div style="display:flex;justify-content:space-between;align-items:center">
-          <strong>PHP / Backend</strong><span class="sub">20%</span>
+          <strong><i class='bx bxl-php'></i> PHP / Backend</strong><span class="sub">20%</span>
         </div>
         <div class="bar"><div class="fill" data-target="20"></div></div>
       </div>
@@ -639,10 +641,12 @@
     <h2 class="heading">By the <span>Numbers</span></h2>
     <div class="grid cards">
       <div class="card stat">
+        <i class='bx bx-folder-open' style="font-size: 2.5rem; color: var(--primary); margin-bottom: 10px;"></i>
         <h3 class="counter" data-to="25">6</h3>
         <p>Projects Completed</p>
       </div>
       <div class="card stat">
+        <i class='bx bx-happy-heart-eyes' style="font-size: 2.5rem; color: var(--primary); margin-bottom: 10px;"></i>
         <h3 class="counter" data-to="12">4</h3>
         <p>Happy Clients</p>
       </div>
