--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bigboy Chuks — Frontend & Web Developer Portfolio</title>
  <link rel="icon" type="image/png" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
 
   <!-- Box Icons -->
@@ -753,4 +757,5 @@
   </script>
 </body>
 </html>
+
 
