--- a/see-my-work.html
+++ b/see-my-work.html
@@ -9,7 +9,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Boxicons for icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-   <link rel="icon" type="image/png" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+<!-- Standard favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+
+<!-- Larger sizes for high-resolution displays -->
+<link rel="icon" type="image/png" sizes="192x192" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -329,4 +335,5 @@
 </body>
 
 </html>
+
 
