--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Me - Bigboy</title>
-   <link rel="icon" type="image/png" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+<!-- Standard favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+
+<!-- Larger sizes for high-resolution displays -->
+<link rel="icon" type="image/png" sizes="192x192" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://i.ibb.co/HDsJMpGC/Vibrant-Gradient-B-Design.png">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -309,4 +315,5 @@
   </script>
 </body>
 </html>
+
 
