--- a/see-my-work.html
+++ b/see-my-work.html
@@ -231,7 +231,7 @@
           </p>
           <div class="card-footer">
             <button class="read-more" data-more-label="See Chatbot Details" data-less-label="Hide Chatbot Details">See Chatbot Details</button>
-            <a href="#" class="visit-btn"><i class='bx bx-link-external'></i></a>
+            <a href="https://bigteslaboy3-creator.github.io/my-ai-chat_bot/" class="visit-btn"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
       </div>
@@ -378,4 +378,5 @@
     });
   </script>
 </body>
+
 </html>
